添加权限控制